--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.1",
+    "express": "4.16.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "react-transition-group": "^1.2.1",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
-    "twitter": "^1.7.1",
-    "express": "4.16.3"
+    "twitter": "^1.7.1"
   },
   "proxy": "http://localhost:3001",
   "scripts": {
